--- a/lesson1/nan.html
+++ b/lesson1/nan.html
@@ -21,14 +21,20 @@
 // drawCycle(100,100,0)
 
 //循环画同心圆
-var r=100;
-while(r>50)
-{
-	drawCycle(100,100,r)
-	r=r-2
-}
+// var r=100;
+// while(r>50)
+// {
+// 	drawCycle(100,100,r)
+// 	r=r-2
+// }
+var array =[10,20,30,40,50,60,70,80,90,95,100,105]
+for (var i = 0; i < array.length; i++) {
+	drawCycle(100,100,array[i])
+};
 
-
+// for(var r=100;r>50;r=r-2){
+// drawCycle(100,100,r)
+// }
 
 // //画方向盘
 // drawLine(0,100,200,100);
