--- a/prepare/test.html
+++ b/prepare/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>公章</title>
+    <title>test</title>
   </head>
 
     <body oncontextmenu="return false">
